--- a/AnsibleWorkShop/roles/ansible-podman-rootless-provision/tasks/Set-KernelModules.yml
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-provision/tasks/Set-KernelModules.yml
@@ -35,32 +35,32 @@
             state: present
       loop: "{{ kernel_modules_to_load_list }}"
 
-    - name: Detect /etc/modules-load.d/{{ role_spec_name }}.conf file state
+    - name: Detect /etc/modules-load.d/{{ role_name }}.conf file state
       ansible.builtin.stat:
-        path: /etc/modules-load.d/{{ role_spec_name }}.conf
+        path: /etc/modules-load.d/{{ role_name }}.conf
       register: modules_podman_rootless
 
-    - name: Create /etc/modules-load.d/{{ role_spec_name }}.conf
+    - name: Create /etc/modules-load.d/{{ role_name }}.conf
       ansible.builtin.file:
-        path: /etc/modules-load.d/{{ role_spec_name }}.conf
+        path: /etc/modules-load.d/{{ role_name }}.conf
         state: touch
         mode: u=rw,g=r,o=r
       when:
         - modules_podman_rootless.stat.exists is defined
         - modules_podman_rootless.stat.exists is false
 
-    - name: Set content in /etc/modules-load.d/{{ role_spec_name }}.conf
+    - name: Set content in /etc/modules-load.d/{{ role_name }}.conf
       ansible.builtin.blockinfile:
-        path: /etc/modules-load.d/{{ role_spec_name }}.conf
-        marker: "# {mark} {{ role_spec_name }}"
+        path: /etc/modules-load.d/{{ role_name }}.conf
+        marker: "# {mark} {{ role_name }}"
         block: |
           {{ kernel_modules_to_load }}
         state: present
 
 
-- name: Delete /etc/modules-load.d/{{ role_spec_name }}.conf
+- name: Delete /etc/modules-load.d/{{ role_name }}.conf
   ansible.builtin.file:
-    path: /etc/modules-load.d/{{ role_spec_name }}.conf
+    path: /etc/modules-load.d/{{ role_name }}.conf
     state: absent
   when:
     - definitive_kernel_modules.state == "absent"
