--- a/VagrantWorkShop/InfraSvc-openSUSE/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-openSUSE/Vagrantfile
@@ -31,9 +31,12 @@ Vagrant.configure("2") do |config|
   
   config.vm.hostname = "InfraSvc-openSUSE"
 
-  config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+  # config.vm.synced_folder "../../AnsibleWorkShop", "/var/vagrant/AnsibleWorkShop", type: "rsync", rsync__auto: true
+  # config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+  # config.vm.synced_folder "../../LocalWorkShop", "/var/vagrant/LocalWorkShop", type: "rsync", rsync__auto: true
+  config.vm.synced_folder "../../KubeWorkShop", "/var/vagrant/KubeWorkShop", type: "rsync", rsync__auto: true
 
-  # # set static ip for this VM
+  # set static ip for this VM
   config.vm.provision "file", source: "./ifcfg-eth0", destination: "/home/vagrant/ifcfg-eth0"
   config.vm.provision "shell", inline: "sudo cp /home/vagrant/ifcfg-eth0 /etc/sysconfig/network/ifcfg-eth0"
 
@@ -44,15 +47,15 @@ Vagrant.configure("2") do |config|
 
   # install k8s related tools
   # for suse
-  config.vm.provision "shell", inline: "sudo zypper ar -cfg 'https://mirrors.tuna.tsinghua.edu.cn/opensuse/tumbleweed/repo/oss/' tuna-Tumbleweed-oss"
-  config.vm.provision "shell", inline: "sudo zypper mr -d 'repo-backports-update' 'repo-sle-update'"
-  config.vm.provision "shell", inline: "sudo zypper ref"
-  # for opensuse leap micro
-  # # https://documentation.suse.com/sle-micro/5.1/html/SLE-Micro-all/article-administration-slemicro.html#id-1.6.2.4.8.7
-  # config.vm.provision "shell", inline: "sudo transactional-update --non-interactive -c pkg in helm"
-  # config.vm.provision "shell", inline: "sudo transactional-update --non-interactive -c pkg in apparmor-parser"
-  # for opensuse leap
-  config.vm.provision "shell", inline: "sudo zypper --non-interactive in helm"
+  # config.vm.provision "shell", inline: "sudo zypper ar -cfg 'https://mirrors.tuna.tsinghua.edu.cn/opensuse/tumbleweed/repo/oss/' tuna-Tumbleweed-oss"
+  # config.vm.provision "shell", inline: "sudo zypper mr -d 'repo-backports-update' 'repo-sle-update'"
+  # config.vm.provision "shell", inline: "sudo zypper ref"
+  # # for opensuse leap micro
+  # # # https://documentation.suse.com/sle-micro/5.1/html/SLE-Micro-all/article-administration-slemicro.html#id-1.6.2.4.8.7
+  # # config.vm.provision "shell", inline: "sudo transactional-update --non-interactive -c pkg in helm"
+  # # config.vm.provision "shell", inline: "sudo transactional-update --non-interactive -c pkg in apparmor-parser"
+  # # for opensuse leap
+  # config.vm.provision "shell", inline: "sudo zypper --non-interactive in helm"
 
 
 
